Fixed height & vertical height & spacing tweaks

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -24,7 +24,7 @@ $lucida-font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif
 $font-stack: normal normal normal 11px/1.4em $lucida-font-family
 
 $input-font-stack: normal normal normal 15px/16px $lucida-font-family
-$input-height: 30px
+$input-height: 31px
 $input-border-color: #bebebe
 $input-border-radius: 4px
 
@@ -64,9 +64,8 @@ a
 
 #main
   position: relative
-  min-height: 100%
+  height: 795px
   width: 600px
-  padding: 0 0 80px // approx footer height
   margin: 0 auto
 
 #footer
@@ -200,11 +199,11 @@ select
 fieldset
   +container
   overflow: visible
+  padding: 19px 20px 3px
   border:
     width: 1px 0
     style: solid
     color: transparent transparent #e7e7e7
-  padding: 14px 20px 12px
   +transition-property("border-color background-color")
   +transition-duration(0.14s)
 
@@ -221,7 +220,7 @@ fieldset
 
 
 .input
-  margin-bottom: 12px
+  margin-bottom: 21px
 
   > label
     display: block
@@ -238,8 +237,6 @@ fieldset
 
 
   &.checkbox
-    margin-bottom: 0
-
     > label
       display: inline
       font:
